# fenster

./: Cargo.toml  flake.nix  rustfmt.toml
crates/common/: Cargo.toml
crates/common/src/: paths.rs  utils.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: app.rs  listener.rs  main.rs
crates/daemon/src/wl/: mod.rs  output_configuration.rs  output_configuration_head.rs  output_head.rs  output_manager.rs  output_mode.rs  wl_registry.rs
crates/gui/: Cargo.toml
crates/gui/src/: fenster.rs  main.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: lib.rs
