[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
fenster-common = { path = "./crates/common" }
fenster-ipc = { path = "./crates/ipc" }

anyhow = { version = "1.0.100", default-features = false }
async-fs = { version = "2.2.0", default-features = false }
async-global-executor = { version = "3.1.0", default-features = false }
async-io = { version = "2.6.0", default-features = false }
async-lock = { version = "3.4.1", default-features = false }
dirs = { version = "6.0.0", default-features = false }
futures-util = { version = "0.3.31", default-features = false }
gpui = { version = "0.2.2", default-features = false }
parking_lot = { version = "0.12.5", default-features = false }
serde = { version = "1.0.228", default-features = false }
serde_json = { version = "1.0.145", default-features = false }
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.20", default-features = false }
wayland-client = { version = "0.31.11", default-features = false }
wayland-protocols-wlr = { version = "0.3.9", default-features = false }
