[package]
name = "fenster-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-fs.workspace = true
async-global-executor = { workspace = true, features = ["async-io"] }
async-io.workspace = true
async-lock.workspace = true
fenster-common.workspace = true
fenster-ipc.workspace = true
futures-util = { workspace = true, features = ["io"] }
parking_lot.workspace = true
serde_json = { workspace = true, features = ["std"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
wayland-client.workspace = true
wayland-protocols-wlr = { workspace = true, features = ["client"] }
