[package]
name = "fenster"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
fenster-common.workspace = true
gpui = { workspace = true, features = ["wayland", "font-kit"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
